board: Make the moving cards window native

Forcing the moving cards subwindow to be native works around the window
being invisible due to the gtk drawing changes.

https://bugzilla.gnome.org/show_bug.cgi?id=702951